deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: frontend
   labels:
     name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: webserver
   namespace: frontend 
   labels:
     app: webserver
     version: version-1
spec: 
  replicas: 1
  selector:
    matchLabels:
       app: webserver
  template:
    metadata:
       name: webserver
       labels:
           app: webserver
    spec:
       containers:
          - name: exam-project
            image: steveric/exam-project
            securityContext:
              privileged: true
            ports:
              - containerPort: 80

---
apiVersion: v1
kind: Service 
metadata:
   name: exam-service
   namespace: frontend
spec:
  type: NodePort
  selector:
    app: webserver
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
