mongoExpress.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: mongo-express
   labels:
     app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
       app: mongo-express
  template: 
     metadata:
        name: mongo-express
        labels:
           app: mongo-express
     spec:
       containers:
         - name: mongo-app
           image: mongo-express
           ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service 
metadata: 
   name: express-servic
spec:
   selector:
     app: mongo-express
   type: LoadBalancer
   ports:
     - protocol: TCP
       port: 8081
       targetPort: 8081
       nodePort: 30000
