ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingressClassName: nginx
    kubernetes.io/ingress.class: "nginx"
  name: sock-shop-ingress
  namespace: sock-shop
spec:
  rules:
  - host: socks.k8s.steveric.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-end 
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingressClassName: nginx
    kubernetes.io/ingress.class: "nginx"
  name: prometheus&grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.k8s.steveric.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prometheus
            port: 
              number: 9090
  - host: grafana.k8s.steveric.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend: 
             service:
               name: grafana
               port:
                   number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingressClassName: nginx
    kubernetes.io/ingress.class: "nginx"
  name: webapp-ingress
  namespace: default
spec:
  rules:
  - host: mongo.k8s.steveric.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: express-servic
              port:
                number: 8081
